# lithic-api

./: Dockerfile  LICENSE.md  README.md  env.template  pyproject.toml
src/lithic_api/: __init__.py  config.py
src/lithic_api/models/: __init__.py  assignments.py  book.py  transcripts.py  vocabulary.py
src/lithic_api/openai/: __init__.py  api.py  prompts.py
src/lithic_api/routers/: transcription.py  upload.py
src/lithic_api/transcription/: __init__.py  service.py
test/: conftest.py  test_openai.py  test_translation.py
